--- a/Express/package.json
+++ b/Express/package.json
@@ -4,9 +4,10 @@
   "description": "Mock API with overridden methods using express",
   "main": "server.js",
   "scripts": {
-    "start": "set PORT=3000 && node server.js"
+    "start": "set PORT=80 && node server.js"
   },
   "devDependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   }
 }
